@@ -1,3 +1,7 @@
+Unreleased
+  * Path operations now accept anything that implements AsRef<ffi::OsStr>,
+    which enables support for path::Paths in addition to strs.
+
 2016-03-30 - v0.3.3
   * Dependency cleanup: removed rustc-serialize & bumped gexiv2-sys.
   * Types implement more common useful traits.
